<resources>
    <string name="app_name">SuperPro</string>
    <string name="add_button">Add Button</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="new_product">New Product</string>
    <string name="products">Products</string>
    <string name="product_details">Product Details</string>
    <string name="input_product_name">Input Product Name</string>
    <string name="input_product_quantity">Input product Quantity</string>
    <string name="input_product_expiry_date">Input product Expiry date</string>
    <string name="pick_expiry_date_button">Pick Expiry Date Button</string>
    <string name="add_new_product_button">Add New Product Button</string>
    <string name="expiry_dates">Expiry Dates</string>
    <string name="controls">Controls</string>
    <string name="settings">Settings</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="welcome_message">Welcome Message</string>
    <string name="you_are_welcome">You are welcome</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="enter_your_email_for_registration">Enter your email for registration</string>
    <string name="enter_your_password_for_regisration">Enter your password for regisration</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_button">Sign in button</string>
    <string name="register">Register</string>
    <string name="new_user_register_button">New User Register Button</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_reset_button">Reset Password Button</string>
    <string name="company_name">Company Name:</string>
    <string name="address">Address:</string>
    <string name="reset">Reset</string>
    <string name="logout">Logout</string>
    <string name="phone_number">Phone Number:</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="expiry_date_dd_mm_yyyy">Expiry Date(DD/MM/YYYY)</string>
    <string name="enter_company_name">Enter Company name</string>
    <string name="region_state">Region/State:</string>
    <string name="country">Country:</string>
    <string name="fill_all_fields_meesage">Please fill all the fields</string>
    <string name="enter_valid_email_message">Please enter a valid email</string>
    <string name="password_not_match_message">The Passwords do not match</string>
    <string name="registration_successful_message">Registration was successful!</string>
    <string name="registration_failed_meesage">Registration failed!</string>
    <string name="enter_your_registered_email_to_reset_password">Enter your registered email to reset password</string>
    <string name="change_photo_dialog">ChangePhotoDialog</string>


</resources>
