<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="logInViewModel"
            type="com.ernestkoko.superpro.screens.login.LoginViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/welcome_message"
                    style="@style/welcome_message_style"
                    android:layout_marginTop="@dimen/dp_16_dim"
                    android:contentDescription="@string/welcome_message"
                    android:text="@string/you_are_welcome"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Upper_layout_editText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/welcome_message">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/sign_in_button"
                        style="@style/ButtonStyle"
                        android:contentDescription="@string/sign_in_button"
                        android:text="@string/sign_in" />






                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </RelativeLayout>


</layout>