<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.login.longin_registration.RegistrationFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/upper_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Upper_layout_editText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/company_name_edit"
            style="@style/text_input_edit"
            android:inputType="text|number"
            android:text="@string/company_name" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/company_email_edit"
                android:text="@string/email"

                android:inputType="textEmailAddress"
                style="@style/text_input_edit" />
            <com.google.android.material.textfield.TextInputLayout
               style="@style/EditTextLayoutStyle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/company_phoneNumber_edit"
                    android:inputType="phone|number"
                    android:text="@string/phone_number"
                   style="@style/text_input_edit"/>
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/text_input_edit"
                android:id="@+id/company_password_edit1"
                android:text="@string/password"
                android:inputType="textPassword"/>


        </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/EditTextLayoutStyle">
        <com.google.android.material.textfield.TextInputEditText
            style="@style/text_input_edit"
            android:id="@+id/company_password_edit2"
            android:text="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/text_input_edit"
                android:id="@+id/company_address_edit"
                android:text="@string/address"
                android:inputType="text|number|textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/margin_24dp"
        app:layout_constraintTop_toBottomOf="@+id/upper_text_input_layout"
        app:layout_constraintStart_toStartOf="@+id/upper_text_input_layout"
        app:layout_constraintEnd_toEndOf="@+id/upper_text_input_layout"
        android:text="Register"/>
</androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
</layout>