<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="newProductVieModel"
            type="com.ernestkoko.superpro.screens.newproducts.NewProductViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.newproducts.NewProductFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_12dp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:layout_marginEnd="@dimen/margin_12dp"
            android:layout_marginBottom="@dimen/margin_24dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/product_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name" />

            <EditText
                android:id="@+id/product_quantity_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:inputType="number|numberDecimal" />

            <TextView
                android:id="@+id/product_expiry_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Expiry Date"
                android:text="@={newProductVieModel.setEditText}" />

            <Button
                android:id="@+id/button_pick_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pick Date" />

            <EditText
                android:id="@+id/product_manufacturer_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Manufacturer" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> newProductVieModel.onInsert()}"
                android:text="Add" />

            <ImageView
                android:id="@+id/new_product_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/new_product"
                android:layout_gravity="center"
                android:background="@color/colorAccent"

                />

        </LinearLayout>


    </ScrollView>
</layout>